<resources>
    <string name="app_name">CarShare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!--LOGIN-->
    <string name="welcome_message">Welcome, %s</string>
    <string name="sign_out">Logout</string>
    <!--Facebook-->
    <string name="facebook_application_id" translatable="false">620344551509671</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb620344551509671</string>
    <!--Twitter-->
    <string name="twitter_consumer_key" translatable="false"> 0u0vyohB7xfDO0QXxhr3LiMfh</string>
    <string name="twitter_consumer_secret" translatable="false">sKUe6Dq4xbSco3aaAUUgx3VEuERUnZK2aJ9sQLPgm0hUw3KCg3</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_add_member">AddMemberActivity</string>
    <string name="ac_add_member_select">Select the members of the group</string>
    <string name="button_add_member">Add member</string>
    <string name="label_name">Name</string>
    <string name="label_origin">Origin</string>
    <string name="label_destination">Destination</string>
    <string name="label_hour">Hour (hh:mm)</string>
    <string name="label_date">Date (yyyy/mm/dd)</string>
    <string name="label_plannedfor">Planned for:</string>
    <string name="label_notselected">Not selected</string>
    <string name="button_select_user">Select</string>
    <string name="button_remove_user">Remove</string>
    <string name="label_doneby">Done by</string>
    <string name="day_long_monday">Monday</string>
    <string name="day_long_tuesday">Tuesday</string>
    <string name="day_long_wednesday">Wednesday</string>
    <string name="day_long_thursday">Thursday</string>
    <string name="day_letter_tuesday">T</string>
    <string name="day_long_frinday">Friday</string>
    <string name="day_long_saturday">Saturday</string>
    <string name="day_long_sunday">Sunday</string>
    <string name="day_letter_monday">M</string>
    <string name="day_letter_wednesday">W</string>
    <string name="day_letter_thursday">R</string>
    <string name="day_letter_friday">F</string>
    <string name="day_letter_saturday">S</string>
    <string name="day_letter_sunday">U</string>
    <string name="label_till">Till (yyyy/mm/yy)</string>
    <string name="button_create_event">Create Event</string>
    <string name="label_example_email">mail@mail.com</string>
    <string name="label_example_username">username</string>
    <string name="button_edit">Edit</string>
    <string name="button_update">Update</string>
    <string name="label_group_name">Group name</string>
    <string name="button_create_group">Create Group</string>
    <string name="button_next">Next</string>
    <string name="button_send">Send</string>
    <string name="label_example_message">Hello!</string>
    <string name="button_add_friend">Add friend</string>
    <string name="label_friends">Friend</string>
    <string name="label_request_sent">Sent Request</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="label_example_username_at">\@username</string>
    <string name="label_role">Role</string>
    <string name="button_check">Check</string>
    <string name="button_create_username">Create User</string>
    <string name="label_travels">Travel(s)</string>
    <string name="menu_find_users">Find Users</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_create_group">Create Group</string>
    <string name="menu_title_users">Users</string>
    <string name="menu_title_friendship">Friendship</string>
    <string name="menu_title_groups">Groups</string>
    <string name="menu_friendshiprequests">Friendship Requests</string>
    <string name="toast_emptyname">Empty Name</string>
    <string name="toast_selectusers">Select more than 0 users</string>
    <string name="toast_wrongdate">Wrong date</string>
    <string name="toast_wronghour">Empty Hour</string>
    <string name="toast_emptyorigin">Empty Origin</string>
    <string name="toast_emptydestination">Empty Destination</string>
    <string name="label_error">Error</string>
    <string name="label_removedusername">Removed User</string>

</resources>
