<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Group.CreateEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <EditText
            android:id="@+id/create_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_label_primary"
            android:hint="@string/label_name" />

        <EditText
            android:id="@+id/create_event_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_location_primary"
            android:hint="@string/label_origin" />


        <EditText
            android:id="@+id/create_event_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_location_primary"
            android:hint="@string/label_destination" />


        <EditText
            android:id="@+id/create_event_fromdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_calendar_primary"
            android:hint="@string/label_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/create_event_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_clock_primary"
            android:ems="10"
            android:hint="@string/label_hour"
            android:inputType="time" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_plannedfor" />

            <TextView
                android:id="@+id/create_event_selectedplanuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/label_notselected" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_event_selectplanuserbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_select_user" />

            <Button
                android:id="@+id/create_event_removeplanuserbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_remove_user" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_doneby" />

            <TextView
                android:id="@+id/create_event_selecteddoneuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/label_notselected" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_event_selectdoneuserbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_select_user" />

            <Button
                android:id="@+id/create_event_removedoneuserbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_remove_user" />
        </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:paddingTop="16dp"
            app:cardBackgroundColor="#ffffff"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scrollbars="horizontal">

                    <CheckBox
                        android:id="@+id/create_event_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/day_letter_monday" />

                    <CheckBox
                        android:id="@+id/create_event_tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/day_letter_tuesday" />

                    <CheckBox
                        android:id="@+id/create_event_wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/day_letter_wednesday" />

                    <CheckBox
                        android:id="@+id/create_event_thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/day_letter_thursday" />

                    <CheckBox
                        android:id="@+id/create_event_friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/day_letter_friday" />

                    <CheckBox
                        android:id="@+id/create_event_saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/day_letter_saturday" />

                    <CheckBox
                        android:id="@+id/create_event_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/day_letter_sunday" />
                </LinearLayout>

                <EditText
                    android:id="@+id/create_event_todate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_calendar_primary"
                    android:enabled="false"
                    android:hint="@string/label_till"
                    android:inputType="date" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/create_event_createbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/button_create_event" />
    </LinearLayout>
</ScrollView>
