<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/chat_message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:paddingLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.alexlesaka.carshare.myviews.CircularNetworkImageView
            android:id="@+id/chat_message_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:adjustViewBounds="true"
            android:src="@android:drawable/sym_def_app_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/chat_message_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/chat_message_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_example_message"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>