<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#ffffff"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <include layout="@layout/user_basic_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/simpleuser_addFriendButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorAccent"
                        android:drawablePadding="8dp"
                        android:drawableTop="@drawable/icon_addgroup_black"
                        android:text="@string/button_add_friend" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/simpleuser_viewProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/colorPrimaryDark"
                        android:drawablePadding="8dp"
                        android:text="@string/label_friends"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/simpleuser_peticionEnviada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawablePadding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/label_request_sent"
                        android:visibility="gone" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/simpleuser_requestlinearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/simpleuser_accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_accept" />

            <Button
                android:id="@+id/simpleuser_decline_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_decline" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>